# lspi

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.codex/skills/lspi/: SKILL.md  SKILL.toml
.github/workflows/: ci.yml
crates/lspi/: Cargo.toml  README.md
crates/lspi-core/: Cargo.toml
crates/lspi-core/src/: config.rs  lib.rs  position_fuzz.rs  snippet.rs  text_edit.rs
crates/lspi-lsp/: Cargo.toml
crates/lspi-lsp/src/: adapter.rs  generic.rs  lib.rs  lsp.rs  omnisharp.rs  pyright.rs  rust_analyzer.rs  symbol.rs
crates/lspi-mcp/: Cargo.toml
crates/lspi-mcp/src/: lib.rs  output.rs  routed_client.rs  routing.rs  structured.rs  tool_schemas.rs  tools.rs  workspace_edit.rs
crates/lspi-mcp/src/handlers/: diagnostics.rs  introspection.rs  mod.rs  navigation.rs  rename.rs  server_control.rs
crates/lspi/skills/lspi/: SKILL.md  SKILL.toml
crates/lspi/src/: main.rs  skill.rs
docs/: AGENTS_SNIPPETS.md  ARCHITECTURE.md  CODEX.md  CONFIG.md  MCP.md  PROGRESS.md  ROADMAP.md  SMOKE_TEST.md
docs/adr/: 0000-template.md  0001-layered-architecture.md  0002-mcp-stdio-first.md  0003-configuration-toml-and-discovery.md  0004-safe-edits-default-preview.md  0005-position-normalization-and-fuzzing.md  0006-server-routing-by-extension-and-root.md  0007-tool-results-structured-content.md  0008-configuration-toml-and-json.md  0009-rust-analyzer-warmup-and-timeouts.md  0010-workspace-edit-application-safety.md  0011-snippet-policy-and-output-caps.md  0012-strict-apply-hash-handshake.md  README.md
samples/cpp/Hello/: compile_flags.txt
samples/cpp/Hello/src/: main.cpp  mathx.cpp
samples/csharp/Hello/: Lib.cs  Program.cs
samples/go/Hello/: go.mod  main.go
samples/go/Hello/mathx/: mathx.go
samples/lua/Hello/: main.lua  mathx.lua
samples/python/Hello/: package.json
samples/python/Hello/src/: main.py
samples/typescript/Hello/: package.json  tsconfig.json
samples/typescript/Hello/src/: index.ts
scripts/: mcp_smoke.ps1  mcp_smoke_cpp.ps1  mcp_smoke_csharp.ps1  mcp_smoke_go.ps1  mcp_smoke_lua.ps1  mcp_smoke_python.ps1  mcp_smoke_ts.ps1
