[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
hex = "0.4.3"
rmcp = { version = "0.12.0", features = ["transport-async-rw"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync", "time", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
toml = "0.8.20"
url = "2.5.4"
