[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
repository = "https://github.com/Latias94/lspi"
homepage = "https://github.com/Latias94/lspi"

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
hex = "0.4.3"
rmcp = { version = "0.12.0", features = ["transport-async-rw"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync", "time", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
toml = "0.8.20"
url = "2.5.4"
lspi-core = { path = "crates/lspi-core", version = "0.1.0" }
lspi-lsp = { path = "crates/lspi-lsp", version = "0.1.0" }
lspi-mcp = { path = "crates/lspi-mcp", version = "0.1.0" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
