[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
repository = "https://github.com/Latias94/lspi"
homepage = "https://github.com/Latias94/lspi"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rmcp = { version = "0.13", features = ["transport-async-rw"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"
url = "2.5"
lspi-core = { path = "crates/lspi-core", version = "0.2.0" }
lspi-lsp = { path = "crates/lspi-lsp", version = "0.2.0" }
lspi-mcp = { path = "crates/lspi-mcp", version = "0.2.0" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
