[package]
name = "lspi-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LSP client adapters used by lspi."

[dependencies]
anyhow.workspace = true
lspi-core = { workspace = true }
url.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
