[package]
name = "lspi-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
lspi-core = { path = "../lspi-core" }
lspi-lsp = { path = "../lspi-lsp" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.14.0"
