[package]
name = "lspi-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "MCP server implementation for lspi."

[dependencies]
anyhow.workspace = true
lspi-core = { path = "../lspi-core" }
lspi-lsp = { path = "../lspi-lsp" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.14.0"
