[package]
name = "lspi-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP server implementation for lspi."

[dependencies]
anyhow.workspace = true
lspi-core = { workspace = true }
lspi-lsp = { workspace = true }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.14.0"
