[package]
name = "lspi"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
lspi-core = { path = "../lspi-core" }
lspi-lsp = { path = "../lspi-lsp" }
lspi-mcp = { path = "../lspi-mcp" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
