[package]
name = "lspi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Giving AI the sight of LSP: bridge LSP capabilities to AI coding CLIs via an MCP server over stdio."
readme = "README.md"
keywords = ["lsp", "mcp", "codex", "ai", "cli"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]

[package.metadata.binstall]
# `cargo-binstall` provides `{ repo }` as a full URL (e.g. https://github.com/OWNER/REPO),
# and our cargo-dist release assets are named like `{ name }-{ target }.tar.xz` under the `v{ version }` tag,
# with binaries located under the top-level directory `{ name }-{ target }/`.
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.xz"
pkg-fmt = "txz"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
anyhow.workspace = true
clap.workspace = true
lspi-core = { workspace = true }
lspi-lsp = { workspace = true }
lspi-mcp = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
